# chatrs

./: .env.example  Cargo.toml  README.md  chatrs  diesel.toml  rustfmt.toml
chat/: Cargo.toml
chat/src/: db.rs  lib.rs  message.rs  models.rs  room.rs  user.rs
chat_cli/: Cargo.toml
chat_cli/src/: main.rs
chat_web/: .env.example  Cargo.toml  README.md
chat_web/src/: header.rs  lib.rs  main.rs  message_repo.rs  messages_handler.rs  rooms_handler.rs  user_repo.rs
migrations/2024-06-11-144335_create_rooms/: up.sql
migrations/2024-06-11-144957_create_messages/: up.sql
src/: schema.rs
