[package]
name = "chat_web"
version = "0.1.0"
edition = "2021"
default-run = "chat_web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat = {path = "../chat"}
rocket = "0.5.0"
dotenvy = "0.15"
redis = "0.24.0"

[[bin]]
name = "dev_script"
path = "src/bin/dev_script.rs"
