[package]
name = "chat_web"
version = "0.1.0"
edition = "2021"
default-run = "chat_web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat = {path = "../chat"}
rocket = "0.5.0"
dotenvy = "0.15"
redis = "0.25.4"
serde_json = "1.0.111"
log = "0.4.20"
env_logger = "0.11.3"

[[bin]]
name = "dev_script"
path = "src/bin/dev_script.rs"
